syntax = "proto2";

package meme_protos;

option java_package = "buffers";
option java_outer_classname = "RequestProtos";

message Request {
  optional RequestType type = 1 [default = GET_MEMES];
  optional string name = 2;
  optional string template_id = 3;
  optional int32 box_count = 4;
  optional string text0 = 5;
  optional string text1 = 6;

  enum RequestType {
    FIND_MEME = 0;
    GET_MEMES = 1;
    CREATE_MEME = 2;
  }
}
