syntax = "proto2";

package meme_protos;

option java_package = "buffers";
option java_outer_classname = "ResponseProtos";

message Response {
  optional ResponseType type = 1 [default = ERROR];
  optional bool success = 2;
  optional string data = 3;
  optional string message = 4;
  optional string image = 5;


  enum ResponseType {
    MEME = 0;
    MEMES_ARRAY = 1;
    CAPTIONED_MEME = 2;
    ERROR = 3;
  }
}
